This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

Add ability to revert Template Variables.
Add ability to revert Plugins.
Add ability to revert Snippets.
Add ability to revert Templates.
Add ability to revert Chunks.
#45 Implement tab states for easier back-and-forth in the component.
#43 Improve setup process performance by using getIterator instead of getCollection.
#44 Fix htmlentities() charset error.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-pl        ++
++   Released on 2012-10-29   ++
++++++++++++++++++++++++++++++++
#39 Add Swedish translation (thanks fractalwolfe!)
#33, #34 Fix issue with multi byte (UTF-8) sequences returning empty content.
#36 Fix ID clashes in component.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc4       ++
++   Released on 2012-07-19   ++
++++++++++++++++++++++++++++++++
Fix critical issue on Firefox (possibly others too) affecting TVs.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc3       ++
++   Released on 2012-07-08   ++
++++++++++++++++++++++++++++++++
Add Plugins UI to the component and as tab on the plugin update panel.
Add Snippets UI to the component and as tab on the snippets update panel.
#16 Add a cachebust to javascripts based on version number to eliminate browser cache issues.
#32 Fix E_NOTICE error in VersionX.checkLastVersion possibly causing install/save issues.
#27 Fix resolvers preventing proper uninstall
Clean up javascript to satisfy PhpStorm's JS validation.
Re-align form buttons and tiny bit of UI cleanup.
#31 Fix action bar and VersionX component in IE
#29 Fix issue with empty grids until applying a filter in 2.2.4.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc2       ++
++   Released on 2012-05-28   ++
++++++++++++++++++++++++++++++++
Add Recent Resource Changes dashboard widget for 2.2+.
Add Chunks UI to the component, and tabs to the update panel.