@@ -87,10 +87,38 @@ Ext.extend(VersionX.grid.Templates,MODx.grid.Grid,{
                 var backTo = (VersionX.inVersion) ? '&backTo='+MODx.request['a']+'-'+MODx.request['id'] : '';
                 window.location.href = '?a='+VersionX.action+'&action=template&vid='+eid+backTo;
             }
+        },'-',{
+            text: _('versionx.templates.revert', {id: d.version_id}),
+            handler: function() {
+                this.revertVersion(d.version_id, d.content_id)
+            },
+            scope: this
         });
         if (m.length > 0) {
             this.addContextMenuItem(m);
         }
+    },
+
+    revertVersion: function(version, content) {
+        if (version < 1) { MODx.alert(_('error'), 'Version not properly defined: '+version); }
+        MODx.msg.confirm({
+            title: _('versionx.templates.revert.confirm'),
+            text: _('versionx.templates.revert.confirm.text',{id: version}),
+            url: VersionX.config.connector_url,
+            params: {
+                version_id: version,
+                content_id: content,
+                action: 'mgr/templates/revert'
+            },
+            listeners: {
+                success: {fn: function() {
+                    MODx.msg.status({
+                        message: _('versionx.templates.reverted'),
+                        delay: 4
+                    });
+                }, scope: this }
+            }
+        });
     }
 });
 Ext.reg('versionx-grid-templates',VersionX.grid.Templates);
