@@ -1,5 +1,6 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+#42 Revert objects from the grid (both tabs and component)
 Add ability to revert Template Variables.
 Add ability to revert Plugins.
 Add ability to revert Snippets.
